# test_file_signature

./: .gitignore  CMakeLists.txt  README.md  TODO
lib/tools/: CMakeLists.txt  formatter.cpp  log.cpp  thread_pool.cpp  timer.cpp
lib/tools/hash/: abstract_hasher.cpp  digest.cpp  hasher.cpp  md5.cpp  md5_hasher.cpp
lib/tools/include/tools/: formatter.hpp  log.hpp  thread_pool.hpp  timer.hpp  types.hpp
lib/tools/include/tools/hash/: abstract_hasher.hpp  digest.hpp  hasher.hpp  md5.hpp  md5_hasher.hpp
src/: CMakeLists.txt  consts.hpp  digest.cpp  digest.hpp  main.cpp  md5.cpp  md5.hpp  misc.cpp  misc.hpp  reader.cpp  reader.hpp  slices_scheme.cpp  slices_scheme.hpp  thread_pool.cpp  thread_pool.hpp  types.hpp  usage.cpp  usage.hpp  usage.txt
src/strategies/: abstract.cpp  abstract.hpp  abstract_strategy.cpp  abstract_strategy.hpp  sequental.cpp  sequental.hpp  sequental_strategy.cpp  sequental_strategy.hpp  threaded.cpp  threaded.hpp  threaded_strategy.cpp  threaded_strategy.hpp
src/strategies/detail/threaded/: processor.cpp  processor.hpp  reader_and_hasher_job.cpp  reader_and_hasher_job.hpp
src/strategies/threaded/: reader_and_hasher_job.cpp  reader_and_hasher_job.hpp  shared_context.cpp  shared_context.hpp
src/writers/: abstract_writer.cpp  abstract_writer.hpp  file_stream_writer.cpp  file_stream_writer.hpp  stream_writer.cpp  stream_writer.hpp  writer.cpp  writer.hpp
test/: CMakeLists.txt  tests
